# ecsact

./: .bazelignore  .bazelrc  .clang-format  .editorconfig  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  format.nu
bazel/: copts.bzl
bazel/runfiles/: BUILD.bazel  unix_runfiles.cc  windows_runfiles.cc
ecsact_cli/ecsact/cli/: BUILD.bazel  ecsact_cli.cc  report.cc
ecsact_cli/ecsact/cli/commands/: BUILD.bazel  benchmark.cc  benchmark.hh  build.hh  codegen.cc  codegen.hh  common.cc  common.hh  config.cc  config.hh  recipe-bundle.hh
ecsact_cli/ecsact/cli/commands/codegen/: BUILD.bazel  codegen.cc
ecsact_cli/ecsact/cli/commands/recipe-bundle/: BUILD.bazel
ecsact_cli/ecsact/cli/detail/: BUILD.bazel  archive.cc  proc_exec.cc  text_report.cc
ecsact_cli/ecsact/cli/detail/executable_path/: BUILD.bazel
ecsact_cli/test/build_recipe/: BUILD.bazel  test.nu
ecsact_codegen/: BUILD.bazel  codegen_plugin.bzl
ecsact_codegen/ecsact/codegen/: plugin.hh
ecsact_codegen/ecsact_codegen_notify/: BUILD.bazel  ecsact_codegen_notify.cc
ecsact_codegen/ecsact_codegen_plugin_validate/: BUILD.bazel  plugin_validate.cc
ecsact_codegen/test/: BUILD.bazel
ecsact_interpret/: BUILD.bazel
ecsact_interpret/cli/: BUILD.bazel  ecsact_interpreter_cli.cc
ecsact_interpret/ecsact/interpret/: eval.cc  eval.h  eval_error.h  eval_files.cc
ecsact_interpret/ecsact/interpret/detail/: builtin_util.hh  eval_parse.hh  file_eval_error.hh
ecsact_interpret/parse-resolver-runtime/: BUILD.bazel  assoc.cc  ids.cc  lifecycle.cc  lifecycle.hh  parse-resolver-runtime.cc
ecsact_interpret/test/: BUILD.bazel  assoc_capabilities.cc  execution_batches.cc  execution_batches.ecsact  explicit_clusters.cc  explicit_clusters.ecsact  metadata_invalid.ecsact  metadata_test.ecsact  test.cc  test_lib.hh  zcpx_repro.cc  zcpx_repro.ecsact
ecsact_interpret/test/errors/: BUILD.bazel  ambiguous_field_type.cc  cluster_invalid_conflict.cc  cluster_invalid_conflict.ecsact  cluster_invalid_context.cc  cluster_invalid_context.ecsact  cluster_invalid_statement.cc  cluster_invalid_statement.ecsact  duplicate_notice_components.cc  invalid_assoc_field.cc  invalid_notify_settings.cc  invalid_stream_component_param_value.cc  no_capabilities.cc  no_package_statement_first.cc  unknown_association_field.cc  unknown_component_notify_settings.cc  unknown_param_value.cc
ecsact_interpret/test/extra/: BUILD.bazel  extra.cc
ecsact_lang_cpp/: BUILD.bazel  codegen_plugin.bzl
ecsact_lang_cpp/cpp_header_codegen/: BUILD.bazel  cpp_header_codegen.cc
ecsact_lang_cpp/cpp_systems_header_codegen/: BUILD.bazel  cpp_systems_header_codegen.cc
ecsact_lang_cpp/cpp_systems_source_codegen/: BUILD.bazel  cpp_systems_source_codegen.cc
ecsact_lang_cpp/ecsact/cpp/: execution_context.hh
ecsact_lang_cpp/ecsact/lang-support/: lang-cc.hh
ecsact_lang_cpp/systems_header_codegen/: BUILD.bazel  systems_header_codegen.cc
ecsact_lang_cpp/test/: BUILD.bazel  system_impls.cc
ecsact_lang_cpp/test/plugins/: BUILD.bazel
ecsact_lang_csharp/: BUILD.bazel
ecsact_lang_csharp/csharp_codegen/: BUILD.bazel  csharp_codegen.cc
ecsact_lang_csharp/ecsact/lang-support/: lang-csharp.hh
ecsact_lsp_server/: BUILD.bazel  ecsact_lsp_server.cc
ecsact_lsp_server/details/: message_manager.hh  messages.hh  workspace_manager.hh
ecsact_lsp_server/test/: BUILD.bazel  workspace_manager_test.cc
ecsact_rt_entt/: BUILD.bazel  build_test.cc
ecsact_rt_entt/ecsact/entt/: entity.hh  error_check.hh  event_markers.hh  execution.hh  registry_util.hh  stream_registries.hh
ecsact_rt_entt/ecsact/entt/detail/: apply_component_stream_data.hh  apply_pending.hh  bytes.hh  execution_events_collector.hh  globals.hh  hash.hh  id_map.hh  internal_markers.hh  registry.hh  system_execution_context.hh
ecsact_rt_entt/ecsact/entt/wrapper/: core.hh  dynamic.hh
ecsact_rt_entt/rt_entt_codegen/: BUILD.bazel  rt_entt_codegen.cc
ecsact_rt_entt/rt_entt_codegen/core/: BUILD.bazel  apply_streaming_data.cc  check_error.cc  copy_components.cc  core.hh  entity_matches.cc  events.cc  execute_systems.cc  execution_options.cc  hash_registry.cc  init_registry_storage.cc  print_sys_exec.cc  sorting_components.cc  system_markers.cc  system_notify.cc  update_beforechange.cc
ecsact_rt_entt/rt_entt_codegen/core/sys_exec/: BUILD.bazel  sys_exec.cc  sys_exec.hh
ecsact_rt_entt/rt_entt_codegen/core/system_provider/: BUILD.bazel  system_ctx_functions.cc  system_ctx_functions.hh  system_provider.cc  system_provider.hh
ecsact_rt_entt/rt_entt_codegen/core/system_provider/association/: association.hh
ecsact_rt_entt/rt_entt_codegen/core/system_provider/basic/: basic.cc  basic.hh
ecsact_rt_entt/rt_entt_codegen/core/system_provider/lazy/: lazy.cc  lazy.hh
ecsact_rt_entt/rt_entt_codegen/core/system_provider/notify/: notify.cc  notify.hh
ecsact_rt_entt/rt_entt_codegen/core/system_provider/parallel/: parallel.cc  parallel.hh
ecsact_rt_entt/rt_entt_codegen/shared/: BUILD.bazel  comps_with_caps.hh  ecsact_entt_details.cc  ecsact_entt_details.hh  parallel.cc  parallel.hh  sorting.hh  system_util.cc  system_util.hh  system_variant.hh  util.cc  util.hh
ecsact_rt_entt/runtime/: ecsact_rt_entt_core.cc  ecsact_rt_entt_dynamic.cc  index.bzl
ecsact_rt_entt/test/: BUILD.bazel  clone_test.cc  codegen_test.nu  hash_test.cc  notify_codegen_test.ecsact  runtime_test.cc  runtime_test.ecsact  spawn.cc  spawn.hh  system_impls.cc
ecsact_rt_entt/test/parallel/: BUILD.bazel  parallel_test.cc
ecsact_runtime/: BUILD.bazel
ecsact_runtime/dylib/: BUILD.bazel  index.bzl
ecsact_runtime/ecsact/runtime/: async.h  async.hh  common.h  core.h  core.hh  definitions.h  dynamic.h  dynamic.hh  meta.h  meta.hh  serialize.h  serialize.hh  static.h
ecsact_runtime/ecsact/si/: wasm.h
ecsact_runtime/scripts/: check_module_header.cc
ecsact_runtime/test/: BUILD.bazel
ecsact_si_wasmer/: BUILD.bazel
ecsact_si_wasmer/ecsact/si/wasmer/detail/: wasm_ecsact_system_execution.cc
ecsact_si_wasmer/test/: BUILD.bazel  minst_test.cc  minst_test_wasm.cc  wasi_test.cc
ecsact_si_wasmer/test/example/: BUILD.bazel  example.cc
(+66 files in other folders)
