module(
    name = "ecsact",
    version = "0.9.0",
)

bazel_dep(name = "emsdk", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "aspect_rules_lint", version = "1.5.3", dev_dependency = True)
bazel_dep(name = "toolchains_llvm", version = "1.4.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "19.1.0")
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

git_override(
    module_name = "emsdk",
    commit = "404dc1ec13f64fce1af1eaf5c007e18212f63527",  # 4.0.13
    remote = "https://github.com/emscripten-core/emsdk.git",
    strip_prefix = "bazel",
)

bazel_dep(name = "bazel_sundry")
git_override(
    module_name = "bazel_sundry",
    commit = "a999751b4992fab12a06f1bede2414708c6db540",
    remote = "https://github.com/seaube/bazel_sundry",
)

bazel_dep(name = "rules_cc", version = "0.2.3")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "boost.mp11", version = "1.87.0")
bazel_dep(name = "boost.dll", version = "1.87.0")
bazel_dep(name = "boost.process", version = "1.87.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "boost.algorithm", version = "1.87.0")
bazel_dep(name = "boost.regex", version = "1.87.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0")
bazel_dep(name = "magic_enum", version = "0.9.7")
bazel_dep(name = "libarchive", version = "3.8.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "docopt.cpp", version = "0.6.2")
bazel_dep(name = "boringssl", version = "0.20250818.0")
bazel_dep(name = "tracy", version = "0.11.1.edr.2")
bazel_dep(name = "xxhash", version = "0.8.3")
bazel_dep(name = "boost.url", version = "1.87.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "lexy", version = "2022.05.1.bcr.1")
bazel_dep(name = "entt", version = "3.12.2")
bazel_dep(name = "rules_wasmer", version = "0.1.2")

wasmer = use_extension("@rules_wasmer//wasmer:extensions.bzl", "wasmer")
use_repo(wasmer, "wasmer")

register_toolchains(
    "@llvm_toolchain//:all",
    "//:all",
    dev_dependency = True,
)
