module(
    name = "ecsact",
    version = "0.9.0",
)

bazel_dep(name = "emsdk", version = "5.0.1", dev_dependency = True)
bazel_dep(name = "rules_python", version = "0.36.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

# only needed for emsdk and version 3.11 is hardcoded in the patch files so if
# you change the version here you must also update the emsdk patch files
python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11")

emsdk = use_extension("@emsdk//:emscripten_deps.bzl", "emscripten_deps", dev_dependency = True)
use_repo(emsdk, "emscripten_bin_linux")
use_repo(emsdk, "emscripten_bin_linux_arm64")
use_repo(emsdk, "emscripten_bin_mac")
use_repo(emsdk, "emscripten_bin_mac_arm64")
use_repo(emsdk, "emscripten_bin_win")

emscripten_cache = use_extension("@emsdk//:emscripten_cache.bzl", "emscripten_cache", dev_dependency = True)
use_repo(emscripten_cache, "emscripten_cache")

bazel_dep(name = "aspect_rules_lint", version = "1.5.3", dev_dependency = True)
bazel_dep(name = "toolchains_llvm", version = "1.4.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "19.1.0")
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

git_override(
    module_name = "hedron_compile_commands",
    commit = "fc76d0bd6a57447ca14eebb2e7009666ed915ece",
    remote = "https://github.com/zaucy/bazel-compile-commands-extractor.git",
)

git_override(
    module_name = "magic_enum",
    commit = "ec79fd3c059a7f5756020cb82d45a1225bf1b1de",
    remote = "git@github.com:zaucy/magic_enum.git",
)

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "boost.mp11", version = "1.87.0")
bazel_dep(name = "boost.dll", version = "1.87.0")
bazel_dep(name = "boost.process", version = "1.87.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "boost.algorithm", version = "1.87.0")
bazel_dep(name = "boost.regex", version = "1.87.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "magic_enum", version = "0.9.7")
bazel_dep(name = "libarchive", version = "3.8.1.bcr.2")
bazel_dep(name = "yaml-cpp", version = "0.9.0")
bazel_dep(name = "docopt.cpp", version = "0.6.3")
bazel_dep(name = "boringssl", version = "0.20260211.0")
bazel_dep(name = "tracy", version = "0.11.1.edr.2")
bazel_dep(name = "xxhash", version = "0.8.3.bcr.1")
bazel_dep(name = "boost.url", version = "1.87.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "lexy", version = "2022.05.1")
bazel_dep(name = "entt", version = "3.12.2")
bazel_dep(name = "rules_wasmer", version = "0.1.2")

wasmer = use_extension("@rules_wasmer//wasmer:extensions.bzl", "wasmer")
use_repo(wasmer, "wasmer")

register_toolchains(
    "@llvm_toolchain//:all",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_win",
    "//:all",
    dev_dependency = True,
)
