module(
    name = "ecsact",
    version = "0.9.0",
)

bazel_dep(name = "emsdk", version = "5.0.1", dev_dependency = True)
bazel_dep(name = "rules_python", version = "0.36.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

# only needed for emsdk and version 3.11 is hardcoded in the patch files so if
# you change the version here you must also update the emsdk patch files
python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11")

emsdk = use_extension("@emsdk//:emscripten_deps.bzl", "emscripten_deps", dev_dependency = True)
use_repo(emsdk, "emscripten_bin_linux")
use_repo(emsdk, "emscripten_bin_linux_arm64")
use_repo(emsdk, "emscripten_bin_mac")
use_repo(emsdk, "emscripten_bin_mac_arm64")
use_repo(emsdk, "emscripten_bin_win")

emscripten_cache = use_extension("@emsdk//:emscripten_cache.bzl", "emscripten_cache", dev_dependency = True)
use_repo(emscripten_cache, "emscripten_cache")

git_override(
    module_name = "hedron_compile_commands",
    commit = "fc76d0bd6a57447ca14eebb2e7009666ed915ece",
    patch_cmds = [
        "powershell.exe -Command \"(Get-Content BUILD) -replace '\\/std:c\\+\\+17', '-std=c++17' | Set-Content BUILD\"",
        "powershell.exe -Command \"(Get-Content refresh_compile_commands.bzl) -replace '\\/std:c\\+\\+17', '-std=c++17' | Set-Content refresh_compile_commands.bzl\"",
    ],
    remote = "https://github.com/zaucy/bazel-compile-commands-extractor.git",
)

git_override(
    module_name = "docoptexpr",
    commit = "a9f35670a14c4f61855e5c168d483819f6ac693c",
    remote = "git@github.com:zaucy/docoptexpr.git",
)

single_version_override(
    module_name = "libarchive",
    patch_cmds = [
        "powershell.exe -Command \"(Get-Content libarchive_bazel_windows_config.h) -replace '^#define (mode_t|pid_t|ssize_t).*', '' | Set-Content libarchive_bazel_windows_config.h\"",
    ],
)

single_version_override(
    module_name = "rules_wasmer",
    patch_cmds = [
        "powershell.exe -Command \"(Get-Content wasmer/private/templates/wasmer.windows.BUILD.bazel -Raw) -replace 'static_library = \\\"lib/wasmer.lib\\\"', ('shared_library = \\\"lib/wasmer.dll\\\",' + [Environment]::NewLine + '    interface_library = \\\"lib/wasmer.dll.lib\\\"') | Set-Content wasmer/private/templates/wasmer.windows.BUILD.bazel -NoNewline\"",
    ],
)

single_version_override(
    module_name = "boost.asio",
    patch_cmds = [
        "powershell.exe -Command \"(Get-Content BUILD.bazel -Raw) -replace '-DEFAULTLIB:ws2_32', '-lws2_32' -replace '-DEFAULTLIB:mswsock', '-lmswsock\\\", \\\"-lbcrypt' | Set-Content BUILD.bazel -NoNewline\"",
    ],
)

single_version_override(
    module_name = "boost.process",
    patch_cmds = [
        "powershell.exe -Command \"(Get-Content BUILD.bazel -Raw) -replace '-DEFAULTLIB:shell32', '-lshell32\\\", \\\"-lntdll' | Set-Content BUILD.bazel -NoNewline\"",
    ],
)

single_version_override(
    module_name = "tracy",
    patch_cmds = [
        "powershell.exe -Command \"(Get-Content BUILD.bazel -Raw) -replace '    includes = ', ('    linkopts = select({\\\"@@platforms//os:windows\\\": [\\\"-lws2_32\\\", \\\"-ldbghelp\\\", \\\"-luser32\\\", \\\"-ladvapi32\\\"], \\\"//conditions:default\\\": []}),' + [Environment]::NewLine + '    includes = ') | Set-Content BUILD.bazel -NoNewline\"",
    ],
)

bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "boost.mp11", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.dll", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.process", version = "1.90.0.bcr.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boost.algorithm", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.regex", version = "1.90.0.bcr.1")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "magic_enum", version = "0.9.8")
bazel_dep(name = "libarchive", version = "3.8.1.bcr.2")
bazel_dep(name = "yaml-cpp", version = "0.9.0")
bazel_dep(name = "docoptexpr", version = "0.1.0")
bazel_dep(name = "boringssl", version = "0.20260616.0")
bazel_dep(name = "tracy", version = "0.11.1.edr.2")
bazel_dep(name = "xxhash", version = "0.8.3.bcr.1")
bazel_dep(name = "boost.url", version = "1.90.0.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "lexy", version = "2022.05.1")
bazel_dep(name = "entt", version = "3.12.2")
bazel_dep(name = "rules_wasmer", version = "0.1.2")
bazel_dep(name = "llvm", version = "0.8.9")

wasmer = use_extension("@rules_wasmer//wasmer:extensions.bzl", "wasmer")
use_repo(wasmer, "wasmer")

register_toolchains(
    "@llvm//toolchain:all",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_win",
    "//:all",
    dev_dependency = True,
)
