load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "execution_context",
    hdrs = ["ecsact/cpp/execution_context.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_lang_cpp",
    deps = [
        "//ecsact_runtime:dynamic",
    ],
)

cc_library(
    name = "support",
    hdrs = ["ecsact/lang-support/lang-cc.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_lang_cpp",
    deps = [
        "//ecsact_runtime:definitions",
    ],
)

cc_library(
    name = "cpp_codegen_plugin_util",
    hdrs = ["ecsact/cpp_codegen_plugin_util.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_lang_cpp",
    deps = [
        "//ecsact_codegen:plugin",
        "//ecsact_lang_cpp:support",
        "//ecsact_runtime:common",
        "//ecsact_runtime:meta",
    ],
)

filegroup(
    name = "headers",
    srcs = glob(["ecsact/**/*.hh"]),
)
