load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "ecsact_lsp_server_lib",
    srcs = [
        "details/jsonrpc_stream.hh",
        "details/message_manager.hh",
        "details/message_receiver.hh",
        "details/message_sender.hh",
    ],
    hdrs = [
        "details/interfaces.hh",
        "details/messages.hh",
        "details/workspace_manager.hh",
    ],
    copts = copts,
    deps = [
        "//ecsact_interpret",
        "//ecsact_lang_cpp:support",
        "//ecsact_lang_csharp:support",
        "//ecsact_parse",
        "@magic_enum",
        "@nlohmann_json//:json",
    ],
)

cc_binary(
    name = "ecsact_lsp_server",
    srcs = ["ecsact_lsp_server.cc"],
    copts = copts,
    deps = [
        ":ecsact_lsp_server_lib",
        "@docopt.cpp//:docopt",
    ],
)
