load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

raw_url = "https://raw.githubusercontent.com"

filegroup(
    name = "headers",
    srcs = glob(["ecsact/**/*.hh"]),
)

cc_library(
    name = "lib",
    hdrs = glob(["ecsact/**/*.hh"]),
    copts = copts,
    strip_include_prefix = "/ecsact_rt_entt",
)

cc_test(
    name = "test",
    srcs = [
        "build_test.cc",
        "//ecsact_rt_entt/runtime:sources",
    ],
    copts = copts,
    defines = [
        "ECSACT_CORE_API=",
        "ECSACT_DYNAMIC_API=",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":lib",
        "//ecsact_runtime:common",
        "//ecsact_runtime:core",
        "//ecsact_runtime:dynamic",
        "@entt",
        "@xxhash",
    ],
)
