load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

exports_files([
    "ecsact/runtime/common.h",
    "ecsact/runtime/core.h",
    "ecsact/runtime/definitions.h",
    "ecsact/runtime/dynamic.h",
    "ecsact/runtime/meta.h",
    "ecsact/runtime/serialize.h",
    "ecsact/runtime/serialize.hh",
    "ecsact/runtime/static.h",
    "ecsact/runtime.h",
    "index.bzl",
])

filegroup(
    name = "headers",
    srcs = glob([
        "ecsact/**/*.h",
        "ecsact/**/*.hh",
    ]),
)

cc_library(
    name = "common",
    hdrs = ["ecsact/runtime/common.h"],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
)

cc_library(
    name = "definitions",
    hdrs = ["ecsact/runtime/definitions.h"],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
    deps = [":common"],
)

cc_library(
    name = "async",
    hdrs = [
        "ecsact/runtime/async.h",
        "ecsact/runtime/async.hh",
    ],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
    deps = [
        ":common",
        ":core",
    ],
)

cc_library(
    name = "core",
    hdrs = [
        "ecsact/runtime/core.h",
        "ecsact/runtime/core.hh",
    ],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
    deps = [":common"],
)

cc_library(
    name = "lib",
    hdrs = ["ecsact/lib.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
)

cc_library(
    name = "dynamic",
    hdrs = ["ecsact/runtime/dynamic.h"],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
    deps = [
        ":common",
        ":definitions",
    ],
)

cc_library(
    name = "meta",
    hdrs = [
        "ecsact/runtime/meta.h",
        "ecsact/runtime/meta.hh",
    ],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
    deps = [
        ":common",
        ":definitions",
    ],
)

cc_library(
    name = "serialize",
    hdrs = [
        "ecsact/runtime/serialize.h",
        "ecsact/runtime/serialize.hh",
    ],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
    deps = [
        ":common",
        ":core",
    ],
)

cc_library(
    name = "static",
    hdrs = ["ecsact/runtime/static.h"],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
    deps = [":common"],
)

cc_library(
    name = "si_wasm",
    hdrs = [
        "ecsact/si/wasm.h",
        "ecsact/si/wasm.hh",
    ],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
    deps = [":common"],
)

cc_library(
    name = "dylib",
    hdrs = ["ecsact/runtime/dylib.h"],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
    deps = [":common"],
)

cc_library(
    name = "ecsact_runtime",
    hdrs = ["ecsact/runtime.h"],
    copts = copts,
    strip_include_prefix = "/ecsact_runtime",
    deps = [
        ":async",
        ":core",
        ":dynamic",
        ":meta",
        ":serialize",
        ":static",
    ],
)
