load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "headers",
    srcs = glob([
        "ecsact/si/wasmer/**/*.hh",
        "ecsact/si/wasmer/**/*.h",
    ]),
)

filegroup(
    name = "sources",
    srcs = glob([
        "ecsact/si/wasmer/**/*.cc",
        # "ecsact/si/wasmer/**/*.hh",
        # "ecsact/si/wasmer/**/*.h",
    ]),
)

"""
It is expected that users of this target are to set ECSACT_SI_WASM_API* and ECSACT_DYNAMIC_API* macros for their configuration
Example 1:
```
cc_library(
    name = "my_si_wasm_impl",
    deps = ["//ecsact_si_wasmer:implementation"],
    defines = [
        # Statically link the si_wasm api
        "ECSACT_SI_WASM_API=",
        # Load the dynamic module at runtime
        "ECSACT_DYNAMIC_API_LOAD_AT_RUNTIME",
    ],
)
```

```
Example 2:
cc_library(
    name = "my_si_wasm_impl",
    deps = ["//ecsact_si_wasmer:implementation"],
    defines = [
        # Statically link the si_wasm api
        "ECSACT_SI_WASM_API=",
        # Statically link dynamic module
        "ECSACT_DYNAMIC_API=",
    ],
)
```
"""

cc_library(
    name = "implementation",
    srcs = [":sources"],
    hdrs = [":headers"],
    copts = copts,
    linkopts = select({
        "@platforms//os:windows": [
            "-lws2_32",
            "-lbcrypt",
            "-luserenv",
            "-ladvapi32",
            "-lntdll",
        ],
        "//conditions:default": [],
    }),
    strip_include_prefix = "/ecsact_si_wasmer",
    deps = [
        "//ecsact_runtime:dynamic",
        "//ecsact_runtime:si_wasm",
        "@wasmer",
    ],
)

cc_library(
    name = "minst",
    srcs = [
        "ecsact/si/wasmer/detail/minst/minst.cc",
    ],
    hdrs = [
        "ecsact/si/wasmer/detail/minst/minst.hh",
    ],
    copts = copts,
    linkopts = select({
        "@platforms//os:windows": [
            "-lws2_32",
            "-lbcrypt",
            "-luserenv",
            "-ladvapi32",
            "-lntdll",
        ],
        "//conditions:default": [],
    }),
    strip_include_prefix = "/ecsact_si_wasmer",
    deps = [
        ":cpp_util",
        "//ecsact_runtime:common",
        "@wasmer",
    ],
)

cc_library(
    name = "cpp_util",
    hdrs = ["ecsact/si/wasmer/detail/cpp_util.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_si_wasmer",
)
