load("//bazel:copts.bzl", "copts")
load("//ecsact_lang_cpp:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "ecsact_codegen_notify",
    srcs = ["ecsact_codegen_notify.cc"],
    copts = copts,
    no_validate_test = True,
    output_extension = "notify.ecsact",
    deps = [
        "//ecsact_lang_cpp:support",
        "//ecsact_runtime:common",
        "//ecsact_runtime:meta",
    ],
)
