load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "lib",
    srcs = [
        "plugin_validate.cc",
    ],
    copts = copts,
    deps = [
        "//ecsact_codegen:plugin_validate_headers",
        "//ecsact_runtime:dylib",
        "//ecsact_runtime:meta",
        "@boost.dll",
    ],
)

cc_binary(
    name = "ecsact_codegen_plugin_validate",
    srcs = ["main.cc"],
    copts = copts,
    deps = [
        ":lib",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)
