load("//bazel:copts.bzl", "copts")
load("//ecsact_lang_cpp:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "ecsact_cpp_header_codegen",
    srcs = ["cpp_header_codegen.cc"],
    copts = copts,
    output_extension = "hh",
    deps = [
        "//ecsact_lang_cpp:cpp_codegen_plugin_util",
        "//ecsact_lang_cpp:support",
    ],
)

alias(
    name = "cpp_header_codegen",
    actual = ":ecsact_cpp_header_codegen",
)
