load("//bazel:copts.bzl", "copts")
load("//ecsact_lang_cpp:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "ecsact_rt_entt_codegen",
    srcs = ["rt_entt_codegen.cc"],
    copts = copts,
    output_extension = "rt_entt.cc",
    deps = [
        "//ecsact_lang_cpp:cpp_codegen_plugin_util",
        "//ecsact_lang_cpp:support",
        "//ecsact_rt_entt/rt_entt_codegen/core",
        "//ecsact_rt_entt/rt_entt_codegen/shared:ecsact_entt_details",
        "//ecsact_rt_entt/rt_entt_codegen/shared:util",
    ],
)

alias(
    name = "rt_entt_codegen",
    actual = ":ecsact_rt_entt_codegen",
)
