load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")
load("//bazel/tools:cc_stamp_header.bzl", "cc_stamp_header")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "report_message",
    hdrs = ["report_message.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_cli",
)

cc_library(
    name = "report",
    srcs = ["report.cc"],
    hdrs = ["report.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_cli",
    deps = [
        ":report_message",
    ],
)

cc_stamp_header(
    name = "bazel_stamp_header",
    out = "bazel_stamp_header.hh",
)

cc_binary(
    name = "ecsact",
    srcs = [
        "bazel_stamp_header.hh",
        "ecsact_cli.cc",
    ],
    copts = copts,
    data = [
        "@tracy//:tracy_srcs",
    ],
    defines = select({
        "//ecsact_cli:use_sdk_version_enabled": ["ECSACT_CLI_USE_SDK_VERSION"],
        "//ecsact_cli:use_sdk_version_disabled": [],
    }),
    stamp = 1,
    visibility = ["//visibility:public"],
    deps = [
        # "//ecsact_cli/ecsact/cli/commands:benchmark",
        "//ecsact_cli/ecsact/cli/commands:codegen",
        "//ecsact_cli/ecsact/cli/commands:command",
        "//ecsact_cli/ecsact/cli/commands:config",
        "//ecsact_cli/ecsact/cli/commands:build",
        "//ecsact_cli/ecsact/cli/commands:recipe-bundle",
    ],
)
