load("@rules_cc//cc:defs.bzl", "cc_test")
load("//bazel:copts.bzl", "copts")

cc_test(
    name = "test_build_recipe",
    srcs = ["test_build_recipe.cc"],
    args = ["--gtest_catch_exceptions=0"],
    copts = copts,
    data = [
        "ecsact_build_test.cc",
        "ecsact_build_test_merge.cc",
        "test-merge-recipe.yml",
        "test-recipe.yml",
        "//ecsact_cli",
        "//ecsact_cli/test:test.ecsact",
        "//ecsact_cli/test:test_codegen_plugin",
    ] + select({
        "@platforms//os:windows": [],
        "//conditions:default": [
            "@llvm_toolchain_llvm//:bin/clang",
        ],
    }),
    env = select({
        "@platforms//os:windows": {
            "TEST_ECSACT_CLI": "$(rootpath //ecsact_cli)",
            "TEST_ECSACT_BUILD_RECIPE_PATH": "$(rootpath test-recipe.yml)",
            "TEST_ECSACT_BUILD_MERGE_RECIPE_PATH": "$(rootpath test-merge-recipe.yml)",
            "TEST_ECSACT_FILE_PATH": "$(rootpath //ecsact_cli/test:test.ecsact)",
            "TEST_CODEGEN_PLUGIN_PATH": "$(rootpath //ecsact_cli/test:test_codegen_plugin)",
        },
        "//conditions:default": {
            "TEST_ECSACT_CLI": "$(rootpath //ecsact_cli)",
            "TEST_ECSACT_BUILD_RECIPE_PATH": "$(rootpath test-recipe.yml)",
            "TEST_ECSACT_BUILD_MERGE_RECIPE_PATH": "$(rootpath test-merge-recipe.yml)",
            "TEST_ECSACT_FILE_PATH": "$(rootpath //ecsact_cli/test:test.ecsact)",
            "TEST_CODEGEN_PLUGIN_PATH": "$(rootpath //ecsact_cli/test:test_codegen_plugin)",
            "CC": "$(rootpath @llvm_toolchain_llvm//:bin/clang)",
        },
    }),
    env_inherit = select({
        "@platforms//os:windows": [
            "PATH",
            "PATHEXT",
            "PWD",
            "APPDATA",
            "ProgramData",
            "ProgramFiles",
            "ProgramFiles(x86)",
            "PROGRAMDATA",
            "PROGRAMFILES",
            "PROGRAMFILES(X86)",
            "TEMP",
            "OS",
            "WINDIR",
        ],
        "//conditions:default": [],
    }),
    tags = ["no-sandbox"],
    deps = [
        "//ecsact_cli/ecsact/cli/commands:build",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_build_recipe_bundle",
    srcs = ["test_build_recipe_bundle.cc"],
    args = ["--gtest_catch_exceptions=0"],
    copts = copts,
    data = [
        "ecsact_build_test.cc",
        "ecsact_build_test_merge.cc",
        "test-merge-recipe.yml",
        "test-recipe.yml",
        "//ecsact_cli",
        "//ecsact_cli/test:test.ecsact",
        "//ecsact_cli/test:test_codegen_plugin",
    ] + select({
        "@platforms//os:windows": [],
        "//conditions:default": [
            "@llvm_toolchain_llvm//:bin/clang",
        ],
    }),
    env = select({
        "@platforms//os:windows": {
            "TEST_ECSACT_CLI": "$(rootpath //ecsact_cli)",
            "TEST_ECSACT_BUILD_RECIPE_PATH": "$(rootpath test-recipe.yml)",
            "TEST_ECSACT_BUILD_MERGE_RECIPE_PATH": "$(rootpath test-merge-recipe.yml)",
            "TEST_ECSACT_FILE_PATH": "$(rootpath //ecsact_cli/test:test.ecsact)",
            "TEST_CODEGEN_PLUGIN_PATH": "$(rootpath //ecsact_cli/test:test_codegen_plugin)",
        },
        "//conditions:default": {
            "TEST_ECSACT_CLI": "$(rootpath //ecsact_cli)",
            "TEST_ECSACT_BUILD_RECIPE_PATH": "$(rootpath test-recipe.yml)",
            "TEST_ECSACT_BUILD_MERGE_RECIPE_PATH": "$(rootpath test-merge-recipe.yml)",
            "TEST_ECSACT_FILE_PATH": "$(rootpath //ecsact_cli/test:test.ecsact)",
            "TEST_CODEGEN_PLUGIN_PATH": "$(rootpath //ecsact_cli/test:test_codegen_plugin)",
            "CC": "$(rootpath @llvm_toolchain_llvm//:bin/clang)",
        },
    }),
    env_inherit = select({
        "@platforms//os:windows": [
            "PATH",
            "PATHEXT",
            "PWD",
            "APPDATA",
            "ProgramData",
            "ProgramFiles",
            "ProgramFiles(x86)",
            "PROGRAMDATA",
            "PROGRAMFILES",
            "PROGRAMFILES(X86)",
            "TEMP",
            "OS",
            "WINDIR",
        ],
        "//conditions:default": [],
    }),
    tags = ["no-sandbox"],
    deps = [
        "//ecsact_cli/ecsact/cli/commands:build",
        "//ecsact_cli/ecsact/cli/commands:recipe-bundle",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
