load("@rules_cc//cc:defs.bzl", "cc_test")
load("//bazel:copts.bzl", "copts")

# buildifier: keep sorted
_TESTS = [
    "cluster_invalid_conflict",
    "cluster_invalid_context",
    "cluster_invalid_statement",
    "duplicate_notice_components",
    "invalid_assoc_field",
    "invalid_notify_settings",
    "invalid_stream_component_param_value",
    "no_capabilities",
    "no_package_statement_first",
    "unknown_association_field",
    "unknown_component_notify_settings",
    "unknown_param_value",
]

[cc_test(
    name = test,
    srcs = ["{}.cc".format(test)],
    args = ["--gtest_catch_exceptions=0"],
    copts = copts,
    data = ["{}.ecsact".format(test)],
    deps = [
        "//ecsact_interpret",
        "//ecsact_interpret/test:test_lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
) for test in _TESTS]

cc_test(
    name = "ambiguous_field_type",
    srcs = ["ambiguous_field_type.cc"],
    args = ["--gtest_catch_exceptions=0"],
    copts = copts,
    data = [
        "ambiguous_field_type.ecsact",
        "ambiguous_field_type_import.ecsact",
    ],
    deps = [
        "//ecsact_interpret",
        "//ecsact_interpret/test:test_lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
