load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "copts")

cc_test(
    name = "extra",
    srcs = ["extra.cc"],
    copts = copts,
    data = [
        "imported_pkg.ecsact",
        "runtime_test.ecsact",
    ],
    deps = [
        "//ecsact_interpret",
        "//ecsact_interpret/test:test_lib",
        "@bazel_sundry//bazel_sundry:runfiles",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
