load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "copts")

plugins = [
    "cpp_header",
    "cpp_systems_header",
    "cpp_systems_source",
    "systems_header",
]

[cc_test(
    name = plugin,
    srcs = ["test_plugin.cc"],
    copts = copts,
    data = [
        "//ecsact_lang_cpp/{}_codegen".format(plugin),
        "//ecsact_cli",
        "//ecsact_lang_cpp/test:ecsact_srcs",
    ],
    env = {
        "ECSACT_CLI": "$(rootpath //ecsact_cli)",
        "ECSACT_SRCS": "$(rootpaths //ecsact_lang_cpp/test:ecsact_srcs)",
        "ECSACT_CODEGEN_PLUGIN": "$(rootpath //ecsact_lang_cpp/{}_codegen)".format(plugin),
    },
) for plugin in plugins]
