load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "core_internal",
    hdrs = ["core.hh"],
    copts = copts,
    strip_include_prefix = "/ecsact_rt_entt",
    visibility = ["//ecsact_rt_entt/rt_entt_codegen:__pkg__"],
    deps = ["//ecsact_rt_entt/rt_entt_codegen/shared:ecsact_entt_details"],
)

# keep sorted
_CORE_CODEGEN_METHODS = {
    "execute_systems": [
        "//ecsact_rt_entt/rt_entt_codegen/shared:parallel",
        "//ecsact_rt_entt/rt_entt_codegen/shared:system_variant",
    ],
    "entity_matches": [
        "//ecsact_rt_entt/rt_entt_codegen/shared:sorting",
    ],
    "init_registry_storage": [],
    "events": [],
    "print_sys_exec": [
        "//ecsact_rt_entt/rt_entt_codegen/shared:comps_with_caps",
        "//ecsact_rt_entt/rt_entt_codegen/shared:sorting",
        "//ecsact_rt_entt/rt_entt_codegen/shared:system_util",
        "//ecsact_rt_entt/rt_entt_codegen/shared:parallel",
        "//ecsact_rt_entt/rt_entt_codegen/core/sys_exec",
        "//ecsact_rt_entt/rt_entt_codegen/core/system_provider:lazy",
        "//ecsact_rt_entt/rt_entt_codegen/core/system_provider:association",
        "//ecsact_rt_entt/rt_entt_codegen/core/system_provider:notify",
        "//ecsact_rt_entt/rt_entt_codegen/core/system_provider:basic",
        "//ecsact_rt_entt/rt_entt_codegen/core/system_provider:parallel",
        "//ecsact_rt_entt/rt_entt_codegen/core/system_provider",
        "@entt//:entt",
        "//ecsact_rt_entt:lib",
        "@tracy",
    ],
    "check_error": [],
    "execution_options": [],
    "apply_streaming_data": [
        "//ecsact_rt_entt/rt_entt_codegen/shared:parallel",
        "//ecsact_rt_entt/rt_entt_codegen/shared:system_variant",
    ],
    "sorting_components": [
        "//ecsact_rt_entt/rt_entt_codegen/shared:sorting",
    ],
    "system_markers": [
        "//ecsact_rt_entt/rt_entt_codegen/shared:sorting",
        "//ecsact_rt_entt/rt_entt_codegen/shared:system_util",
    ],
    "system_notify": ["//ecsact_rt_entt/rt_entt_codegen/shared:system_util"],
    "update_beforechange": [],
    "copy_components": [],
    "hash_registry": [],
}

[cc_library(
    name = method,
    srcs = ["{}.cc".format(method)],
    copts = copts,
    defines = ["ECSACT_META_API_LOAD_AT_RUNTIME"],
    strip_include_prefix = "/ecsact_rt_entt",
    deps = _CORE_CODEGEN_METHODS[method] + [
        ":core_internal",
        "//ecsact_codegen:plugin",
        "//ecsact_lang_cpp:cpp_codegen_plugin_util",
        "//ecsact_lang_cpp:support",
        "//ecsact_runtime:meta",
        "//ecsact_rt_entt/rt_entt_codegen/shared:util",
    ],
) for method in _CORE_CODEGEN_METHODS]

cc_library(
    name = "core",
    copts = copts,
    strip_include_prefix = "/ecsact_rt_entt",
    visibility = ["//ecsact_rt_entt/rt_entt_codegen:__pkg__"],
    deps = [":core_internal"] + [":{}".format(method) for method in _CORE_CODEGEN_METHODS],
)
